--- a/service/lambdaFunction/package.json
+++ b/service/lambdaFunction/package.json
@@ -18,10 +18,10 @@
     "homepage": "https://github.com/resdenia/syntetic-scripting#readme",
     "dependencies": {
         "@menadevs/objectron": "^0.1.14",
-        "chrome-remote-interface": "^0.31.3",
+        "crypto": "^1.0.1",
         "dotenv": "^16.0.1",
-        "har-recorder": "0.0.1",
         "logzio-nodejs": "^2.0.4",
+        "node-uuid": "^1.4.8",
         "playwright-aws-lambda": "^0.9.0",
         "playwright-core": "^1.24.0",
         "playwright-har": "^0.1.1",
