--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "express": "^4.18.1",
         "express-validator": "^6.14.2",
         "jest": "^28.1.3",
+        "js-yaml": "^4.1.0",
         "logzio-nodejs": "^2.1.4",
         "node-uuid": "^1.4.8",
         "playwright-aws-lambda": "^0.9.0",
