update CloudFormation template to populate  env variable to yml template

--- a/service/cloudFormation/sam-template.yml
+++ b/service/cloudFormation/sam-template.yml
@@ -26,7 +26,7 @@ Parameters:
   Timeout:
      Type: "String"
      Description: "Schedule timeout for Lambda(ex. rate(1 minute), rate(5 minutes), rate(1 day) etc.)"
-  
+##Add Input Env Variables  
 
 Resources:
   ScheduledLambda:
