align function name in CloudFormation and AWS deploy to the cloud lambdas, fix typo

--- a/service/cloudFormation/sam-template.yml
+++ b/service/cloudFormation/sam-template.yml
@@ -52,4 +52,4 @@ Resources:
         Variables:
           LISTENER_URL: !Ref LogzioListenerUrl
           TOKEN: !Ref LogzioToken
-          NAME: !Ref LambdaTestName
+          NAME_FUNCTION: !Ref LambdaTestName
