--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "scripts": {
         "test": "jest",
         "dev": "nodemon index.js",
-        "start": "node index.js"
+        "server": "node index.js",
+        "client": "npm run start --prefix client",
+        "start": "concurrently \"npm run server\" \"npm run client\"",
+        "build": "npm run build --prefix client",
+        "container": "node index.js"
     },
     "author": "",
     "license": "ISC",
@@ -18,6 +22,7 @@
         "@menadevs/objectron": "^0.1.14",
         "archiver": "^5.3.1",
         "aws-sdk": "^2.1185.0",
+        "concurrently": "^7.4.0",
         "crypto": "^1.0.1",
         "dotenv": "^16.0.1",
         "ejs": "^3.1.8",
