--- a/service/lambdaFunction/package.json
+++ b/service/lambdaFunction/package.json
@@ -20,11 +20,11 @@
         "@menadevs/objectron": "^0.1.14",
         "crypto": "^1.0.1",
         "dotenv": "^16.0.1",
+        "jszip": "^3.10.1",
         "logzio-nodejs": "^2.1.4",
         "node-uuid": "^1.4.8",
         "playwright-aws-lambda": "^0.9.0",
         "playwright-core": "^1.24.0",
-        "playwright-har": "^0.1.1",
-        "selenium-webdriver": "^4.4.0"
+        "playwright-har": "^0.1.1"
     }
 }
