--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,7 +37,7 @@ jobs:
             latest=false
           # Docker tags based on the following events/attributes
           
-      - name: Build and push amd64
+      - name: Build and push amd64 with tag of version
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -47,11 +47,20 @@ jobs:
           labels: ${{ steps.dockersynthetics.outputs.labels }}
 
 
-      - name: Build and push amd64 latest
+      - name: Build and push amd64 latest with tag latest-amd
         uses: docker/build-push-action@v2
         with:
           context: .
           platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: logzio/synthetic-script:latest-amd
+          labels: ${{ steps.dockersynthetics.outputs.labels }}
+          
+      - name: Build and push amd64 latest
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: logzio/synthetic-script:latest
           labels: ${{ steps.dockersynthetics.outputs.labels }}
