--- a/service/cloudFormation/sam-template-empty.yml
+++ b/service/cloudFormation/sam-template-empty.yml
@@ -14,6 +14,7 @@ Resources:
 #add zipNameRoute        
         Key: string
       Handler: index.handler
+      Role: 'dump'
       Description: Lambda Function to run playwright test
 #add name of the text
       FunctionName: string
@@ -31,4 +32,28 @@ Resources:
         Variables:
           LISTENER_URL: string
           TOKEN: string
-          NAME_FUNCTION: string 
+          NAME_FUNCTION: string
+  syntheticQueryS3Bucket:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      RoleName: 'dump'
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - 'sts:AssumeRole'
+      Path: /
+      Policies:
+        - PolicyName: 'dump'
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - 's3:GetObject'
+                  - 'lambda:GetFunction'
+                Resource: '*'
