--- a/service/cloudFormation/sam-template.yml
+++ b/service/cloudFormation/sam-template.yml
@@ -15,6 +15,10 @@ Parameters:
     Type: "String"
     Description: "AWS bucket where was uploaded lambdaFunction"
 
+  AWSRegion:
+    Type: "String"
+    Description: "AWS Region where was uploaded lambdaFunction"
+
   ZipNameRoute:
     Type: "String"
     Description: "Zip route in AWS Bucket what was uploaded before"
@@ -39,6 +43,7 @@ Resources:
       Handler: index.handler
       Description: Lambda Function to run playwright test
       FunctionName: !Ref LambdaTestName
+      Role: !GetAtt syntheticQueryS3Bucket.Arn
       MemorySize: 512
       Timeout: 60
       Events:
@@ -46,10 +51,34 @@ Resources:
           Type: Schedule
           Properties:
             Schedule: !Ref Timeout
-            Name: RateSchedule
+            Name: !Join [ '_', [ !Ref AWS::StackName, 'rateschudule' ] ]
             Description: Trigger Lambda once in a minute
       Environment:
         Variables:
           LISTENER_URL: !Ref LogzioListenerUrl
           TOKEN: !Ref LogzioToken
           NAME_FUNCTION: !Ref LambdaTestName
+          REGION: !Ref AWSRegion
+  syntheticQueryS3Bucket:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      RoleName: !Join [ '-', [ 'LogzioSyntheticMonitoringLambdaRole', !Select [ 4, !Split [ '-', !Select [ 2, !Split [ '/', !Ref AWS::StackId ] ] ] ] ] ]
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - s3.amazonaws.com
+            Action:
+              - 'sts:AssumeRole'
+      Path: /
+      Policies:
+      - PolicyName: !Join [ '-', [ 'LogzioSyntheticMonitoringLambdaPolicy', !Select [ 4, !Split [ '-', !Select [ 2, !Split [ '/', !Ref AWS::StackId ] ] ] ] ] ]
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action:
+                  - 's3:GetObject'
+                Resource: '*'
