--- a/service/cloudFormation/sam-template-empty.yml
+++ b/service/cloudFormation/sam-template-empty.yml
@@ -57,3 +57,9 @@ Resources:
                   - 's3:GetObject'
                   - 'lambda:GetFunction'
                 Resource: '*'
+  logzioSyntheticMonitorPrimerInvoke:
+    Type: AWS::CloudFormation::CustomResource
+    DependsOn: ScheduledLambda
+    Version: '1.0'
+    Properties:
+      ServiceToken: 'dump'
