--- a/service/lambdaFunction/package.json
+++ b/service/lambdaFunction/package.json
@@ -21,6 +21,8 @@
         "cfn-response-async": "^1.0.0",
         "crypto": "^1.0.1",
         "dotenv": "^16.0.1",
+        "ffmpeg-static": "^5.1.0",
+        "fluent-ffmpeg": "^2.1.2",
         "jszip": "^3.10.1",
         "logzio-nodejs": "^2.1.4",
         "moment": "^2.29.4",
