--- a/service/lambdaFunction/package.json
+++ b/service/lambdaFunction/package.json
@@ -17,11 +17,12 @@
     },
     "homepage": "https://github.com/resdenia/syntetic-scripting#readme",
     "dependencies": {
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "@ffmpeg-installer/linux-x64": "^4.1.0",
         "@menadevs/objectron": "^0.1.14",
         "cfn-response-async": "^1.0.0",
         "crypto": "^1.0.1",
         "dotenv": "^16.0.1",
-        "ffmpeg-static": "^5.1.0",
         "fluent-ffmpeg": "^2.1.2",
         "jszip": "^3.10.1",
         "logzio-nodejs": "^2.1.4",
@@ -29,9 +30,10 @@
         "node-uuid": "^1.4.8",
         "playwright-aws-lambda": "^0.9.0",
         "playwright-core": "^1.30.0",
-        "playwright-har": "^0.1.1"
+        "playwright-har": "^0.1.1",
+        "playwright-video": "^2.4.0"
     },
     "devDependencies": {
-        "playwright": "^1.30.0"
+        "playwright": "^1.31.1"
     }
 }
